--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -219,6 +219,7 @@ const NavLinks = [
     .header-nav .nav-item__link {
       display: block;
       color: var(--color-snow);
+      font-weight: 500;
       font-size: 0.625rem;
       background-color: var(--color-gold);
       border-radius: 3.2em;
