--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -2,24 +2,44 @@
     font-family: 'Roboto';
     src:
         local(""),
-        url("/fonts/roboto/Roboto-Regular.woff2") format("woff2"),
-        url("/fonts/roboto/Roboto-Regular.woff") format("woff");    
+        url("/fonts/roboto/Roboto-Regular-us.woff2") format("woff2"),
+        url("/fonts/roboto/Roboto-Regular-us.woff") format("woff");    
     font-weight: 400;
     font-style: normal;
     font-display: block;
-    text-rendering: optimizeLegibility;
 }
 
 @font-face {
     font-family: 'Roboto';
     src:
         local(""),
-        url("/fonts/roboto/Roboto-Medium.woff2") format("woff2"),
-        url("/fonts/roboto/Roboto-Medium.woff") format("woff");    
+        url("/fonts/roboto/Roboto-Medium-us.woff2") format("woff2"),
+        url("/fonts/roboto/Roboto-Medium-us.woff") format("woff");    
     font-weight: 500;
     font-style: normal;
     font-display: block;
-    text-rendering: optimizeLegibility;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src:
+        local(""),
+        url("/fonts/roboto/Roboto-Semibold-us.woff2") format("woff2"),
+        url("/fonts/roboto/Roboto-Semibold-us.woff") format("woff");    
+    font-weight: 600;
+    font-style: normal;
+    font-display: block;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src:
+        local(""),
+        url("/fonts/roboto/Roboto-Bold-us.woff2") format("woff2"),
+        url("/fonts/roboto/Roboto-Bold-us.woff") format("woff");    
+    font-weight: 700;
+    font-style: normal;
+    font-display: block;
 }
 
 @font-face {
@@ -30,20 +50,6 @@
     font-weight: 400;
     font-style: normal;
     font-display: block;
-    text-rendering: optimizeLegibility;
-    unicode-range: U+45,U+49,U+4E,U+52,U+53,U+65,U+69,U+6E,U+72,U+73;
-}
-
-
-@font-face {
-    font-family: 'Sirene-bold';
-    src:
-        url("/fonts/sirene-splited-fonts/Sirene-bold-en.woff2") format("woff2"),
-        url("/fonts/sirene-splited-fonts/Sirene-bold-en.woff") format("woff");    
-    font-weight: 700;
-    font-style: normal;
-    font-display: block;
-    text-rendering: optimizeLegibility;
     unicode-range: U+45,U+49,U+4E,U+52,U+53,U+65,U+69,U+6E,U+72,U+73;
 }
 
