--- a/src/components/NavSocialMedia.astro
+++ b/src/components/NavSocialMedia.astro
@@ -8,10 +8,14 @@ const {color} = Astro.props as Color;
 
 const {class: className} = Astro.props;
 
+
+const tel = 18476710065;
+//https://api.whatsapp.com/send/?phone=79200000000
+//whatsapp://send?phone=+${tel}
 const socialIcon = [
     {name: "telegram", href: "https://t.me/juli_zag" },
-    {name: "whatsapp", href: "#" },
-    {name: "viber", href: "#" },
+    {name: "whatsapp", href: `viber://chat?number=%2B${tel}`},
+    {name: "viber", href: `https://api.whatsapp.com/send/?phone=${tel}`},
     {name: "instagram", href: "https://www.instagram.com/_sirenebeauty?igsh=ZzhxbDNzcjUwdm5n" }
 ]
 ---
