--- a/src/components/NavSocialMedia.astro
+++ b/src/components/NavSocialMedia.astro
@@ -10,10 +10,11 @@ const {class: className} = Astro.props;
 
 
 const tel = 18476710065;
-
+// https://wa.me/79234567890)
+//href: `https://api.whatsapp.com/send/?phone=${tel}`
 const socialIcon = [
     {name: "telegram", href: "https://t.me/juli_zag" },
-    {name: "whatsapp", href: `https://api.whatsapp.com/send/?phone=${tel}`},
+    {name: "whatsapp", href: `https://wa.me/${tel}`},
     {name: "viber", href: `viber://chat?number=%2B${tel}`}, 
     {name: "instagram", href: "https://www.instagram.com/_sirenebeauty?igsh=ZzhxbDNzcjUwdm5n" }
 ]
