--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,6 +16,8 @@ const color = "black";
 
 <style>
   .header {
+    position: relative;
+    z-index: 10;
     --header-top: clamp(1.875rem, -0.3392rem + 4.6189vw, 3.125rem); /*767 - 30px 1200px - 50px*/
     display: flex;
     justify-content: space-between;
