--- a/src/components/NavSocialMedia.astro
+++ b/src/components/NavSocialMedia.astro
@@ -1,5 +1,6 @@
 ---
 import { Icon } from 'astro-icon/components';
+import NumberTel from './NumberTel.astro';
 
 interface Color {
 	color: string;
@@ -8,14 +9,12 @@ const {color} = Astro.props as Color;
 
 const {class: className} = Astro.props;
 
+// const tel = 18476710065;
 
-const tel = 18476710065;
-// https://wa.me/79234567890)
-//href: `https://api.whatsapp.com/send/?phone=${tel}`
 const socialIcon = [
     {name: "telegram", href: "https://t.me/juli_zag" },
-    {name: "whatsapp", href: `https://wa.me/${tel}`},
-    {name: "viber", href: `viber://chat?number=%2B${tel}`}, 
+    {name: "whatsapp", href: `https://wa.me/${NumberTel}`},
+    {name: "viber", href: `viber://chat?number=%2B${NumberTel}`}, 
     {name: "instagram", href: "https://www.instagram.com/_sirenebeauty?igsh=ZzhxbDNzcjUwdm5n" }
 ]
 ---
