--- a/src/components/elements/Telephone.astro
+++ b/src/components/elements/Telephone.astro
@@ -1,6 +1,6 @@
 ---
 import { Icon } from 'astro-icon/components';
-import NumberTel from '../NumberTel.astro';
+import {NumberTel} from "./NumberTel.astro";
 
 const { class: className} = Astro.props;
 
@@ -16,7 +16,7 @@ interface Icons {
 }
 const { width, height} = Astro.props as Icons;
 
-// const tel = 18476710065;
+// const NumberTel = 18476710065;
 ---
 
 <a class:list={[className, "tel font-size_4 pulse-button"]} data-color={color} href=`tel:+${NumberTel}` aria-labelledby="phone">
