--- a/src/components/elements/Telephone.astro
+++ b/src/components/elements/Telephone.astro
@@ -27,6 +27,7 @@ const { width, height} = Astro.props as Icons;
 
 
     .tel {
+        z-index:1;
         display: flex;
         align-items: center;
         font-family: var(--font-Roboto);
