--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -109,7 +109,7 @@ const NavLinks = [
     }
 
     .header-nav .background-nav {
-      z-index: 1;
+      /* z-index: 1; */
       position: fixed;
       top: 0;
       right: 0;
@@ -131,7 +131,7 @@ const NavLinks = [
     }
 
     .header-nav .hamburger {
-      z-index: 2;
+      /* z-index: 2; */
       position: relative;
       top: 0;
       right: 0;
