--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -111,14 +111,15 @@ const NavLinks = [
     .header-nav .background-nav {
       /* z-index: 1; */
       position: fixed;
-      top: 0;
+      bottom: 0;
       right: 0;
 
       display: block;
       width: 100%;
       height: 0;
       background-color: var(--color-snow);
-      opacity: 0;
+      background-color: red;
+      opacity: 1;
       visibility: visible;
       transition:
         visibility 0.35s ease,
@@ -157,7 +158,7 @@ const NavLinks = [
       top: -20%;
       width: 100%;
       height: max-content;
-      opacity: 0;
+      opacity: 1;
       visibility: visible;
       z-index: 1;
       text-align: center;
