--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -112,11 +112,11 @@ const NavLinks = [
     .background-nav {
       /* z-index: 1; */
       position: fixed;
-      bottom: 0;
+      top: 0;
       right: 0;
 
       display: block;
-      width: 100%;
+      width: 0;
       height: 0;
       background-color: var(--color-snow);
       background-color: red;
@@ -129,6 +129,7 @@ const NavLinks = [
 
     /* .header-nav  */
     .background-nav.open {
+      width: 100%;
       height: 100%;
       opacity: 0.9;
     }
