--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -112,14 +112,13 @@ const NavLinks = [
     .background-nav {
       /* z-index: 1; */
       position: fixed;
-      top: 0;
+      top: -10%;
       right: 0;
 
       display: block;
-      width: 0;
+      width: 100%;
       height: 0;
       background-color: var(--color-snow);
-      background-color: red;
       opacity: 1;
       visibility: visible;
       transition:
@@ -129,7 +128,6 @@ const NavLinks = [
 
     /* .header-nav  */
     .background-nav.open {
-      width: 100%;
       height: 100%;
       opacity: 0.9;
     }
@@ -164,7 +162,7 @@ const NavLinks = [
       top: -20%;
       width: 100%;
       height: max-content;
-      opacity: 1;
+      opacity: 0;
       visibility: visible;
       z-index: 1;
       text-align: center;
