--- a/src/components/Servises.astro
+++ b/src/components/Servises.astro
@@ -11,32 +11,32 @@ const servisesItem = [
     {
         title: "Eyelash extensions",
         imgPath: img1_Local,
-        href: "#"
+        href: "#box-id0"
     },
     {
         title: "Eyelash service",
         imgPath: img2_Local,
-        href: "#"
+        href: "#box-id2"
     },
     {
         title: "Brows service",
         imgPath: img3_Local,
-        href: "#"
+        href: "#box-id8"
     },
     {
         title: "Hair extensions",
         imgPath: img4_Local,
-        href: "#"
+        href: "#box-id4"
     },
     {
         title: "Manicure",
         imgPath: img5_Local,
-        href: "#"
+        href: "#box-id5"
     },
     {
         title: "Pedicure",
         imgPath: img6_Local,
-        href: "#"
+        href: "#box-id6"
     },
 ]
 
