--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -35,10 +35,16 @@ const NavLinks = [
         ))
       }
     </ul>
+    <p class="menu-overlay__text">SIRENE 2024</p>
   </nav>
 </div>
 
 <style>
+
+.menu-overlay__text {
+    display: none;    
+ }
+
   button {
     display: none;
     outline: 0 solid none;
@@ -101,6 +107,7 @@ const NavLinks = [
   }
 
   @media screen and (max-width: 575.98px) {
+
     /*header */
     .header-nav {
       --width-button: 2rem;
@@ -108,13 +115,11 @@ const NavLinks = [
       max-width: var(--width-button);
     }
 
-    /* .header-nav  */
-    .background-nav {
+    .header-nav .background-nav {
       /* z-index: 1; */
       position: fixed;
-      top: -10%;
+      top: 90px;
       right: 0;
-
       display: block;
       width: 100%;
       height: 0;
@@ -126,14 +131,12 @@ const NavLinks = [
         opacity 0.75s ease;
     }
 
-    /* .header-nav  */
-    .background-nav.open {
+    .header-nav .background-nav.open {
       height: 100%;
       opacity: 0.9;
     }
 
-    /* .header-nav */
-    .hamburger {
+    .header-nav .hamburger {
       /* z-index: 2; */
       position: relative;
       top: 0;
@@ -147,16 +150,14 @@ const NavLinks = [
       cursor: pointer;
     }
 
-    /* .header-nav  */
-    .hamburger.open {
+    .header-nav .hamburger.open {
       position: fixed;
       top: calc(var(--header-top) + 6px);
       right: var(--pad-container);
       background-color: var(--color-black1);
     }
 
-    /* .header-nav */
-    .menu-overlay {
+    .header-nav .menu-overlay {
       position: fixed;
       right: 0;
       top: -20%;
@@ -171,14 +172,17 @@ const NavLinks = [
         opacity 0.75s ease;
     }
 
-    /* .header-nav  */
-    .menu-overlay.open {
+    .header-nav .menu-overlay.open {
       top: 14%;
       opacity: 1;
     }
 
-    /* .header-nav  */
-    .nav-list {
+    .menu-overlay.open .menu-overlay__text{
+  display: block; 
+    }
+
+
+    .header-nav .nav-list {
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -193,8 +197,7 @@ const NavLinks = [
       margin: 20px;
     }
 
-    /* .header-nav  */
-    .nav-item {
+    .header-nav .nav-item {
       margin: 10px 0;
       transform: translateY(-380px);
       opacity: 0;
