--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -105,10 +105,37 @@ const motivation2 = "We use high-quality, professional-grade products to ensure 
     left: 46.5%;
     transform: translate(-50%, 50%);
     position: absolute;
-    background-color: red;
     width: 43%;
     height: 77%;
     border-radius: 50%;
+    overflow: hidden;
+  }
+  
+  {
+transition: all 1s ease-out;    
+  }
+  
+
+  .slide {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .slid-1 {
+    background-color: red;
+  }
+
+  .slid-2 {
+    background-color: yellow;
+  }
+
+  .slid-3 {
+    background-color: rgb(14, 116, 58);
   }
 
   .hero-image__mirror {
