fix hero background webp

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -92,7 +92,7 @@ const motivation2 = "We use high-quality, professional-grade products to ensure 
     min-height: 160px;
     aspect-ratio: 1724/700;
 
-    background-image: url("./assets/images/hero/hero-background.jpg");
+    background-image: url("./assets/images/hero/hero-background.webp");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
