--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -12,10 +12,7 @@ const motivation2 = "We use high-quality, professional-grade products to ensure 
 ---
 
 <section class="hero">
-<h1>sirene
-</h1>
-
-
+<h1>sirene</h1>
   <div class="hero-wrap">
     <div class="hero-background">
       <section class="hero-image">
