--- a/src/components/Servises.astro
+++ b/src/components/Servises.astro
@@ -40,6 +40,8 @@ const servisesItem = [
     },
 ]
 
+console.log (servisesItem.length);
+
 ---
 <section id="servises" class="servises section">
     <h2 class="text-uppercase font-size_2 title ">
