--- a/src/components/elements/ButtonBookNow.astro
+++ b/src/components/elements/ButtonBookNow.astro
@@ -2,7 +2,7 @@
 // const NumberTel = 18476710065;
 import {NumberTel} from "./NumberTel.astro";
 ---
-<a href=`sms:+${NumberTel}` class="btn">
+<a href=`sms:${NumberTel}` class="btn">
     Book now
   </a>
 
