--- a/src/components/elements/ButtonBookNowArrow.astro
+++ b/src/components/elements/ButtonBookNowArrow.astro
@@ -5,7 +5,7 @@ const { class: className } = Astro.props;
 const NumberTel = 18476710065;
 ---
 
-<a href=`sms:+${NumberTel}` class="btn">
+<a href=`sms:${NumberTel}` class="btn">
   <p>Book now</p>
 
   <div class="icon-background transition">
